fixed back-to-top lag on home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -109,15 +109,11 @@
                 </div>
             </main>
         </div>
-        <button id="btnScrollToTop"> 
-            <i class="material-icons">arrow_upward</i>
-        </button> 
-        <script> 
-            const btnScrollToTop = document.querySelector("#btnScrollToTop"); 
-            btnScrollToTop.addEventListener("click", function() { 
-                $("html, body").animate({scrollTop: 0 }, "slow"); 
-            }); 
-        </script>
+        <a href="#top">
+            <button id="btnScrollToTop"> 
+                <i class="material-icons">arrow_upward</i>
+            </button> 
+        </a>
     </body>
 
 </html>
