--- a/templates/votive_relief.html
+++ b/templates/votive_relief.html
@@ -210,13 +210,13 @@
             
             $("#inscolors").change(function(){
                 let color = $("#inscolors").val();
-                $('.inscriptions').css("border", "solid " + color);
+                $('.inscriptions').css("border", "3px solid " + color);
                 $('path').css("fill", color);
             });
             
             $("#depcolors").change(function(){
                 let color = $("#depcolors").val();
-                $('.depictions').css("border", "solid " + color);
+                $('.depictions').css("border", "3px solid " + color);
                 $('path').css("fill", color);
             });
 
