fixed typo on home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                 <div class="wid">
                     <h1> Welcome to <span style="color: green">C</span><span style="color: blue">O</span><span style="color: red">G</span> (<span style="color: green">Cellphone</span> <span style="color: blue">Object</span> <span style="color: red">Guide</span>) </h1>
                     <p>
-                        Primarily meant for mobile viewing within a museum from a scanned QR code unique to each object, COG aims to provide an effective, modern solution to the space constrains of a printed museum label.
+                        Primarily meant for mobile viewing within a museum from a scanned QR code unique to each object, COG aims to provide an effective, modern solution to the space constraints of a printed museum label.
                         Working with the potential to expand/collapse sections with a single click and the ability of the viewer to press on the specific parts of images that interest them, large amounts of information can be presented in an economical manner.
                         Specifically, COG provides detailed information about 6 objects from the ancient city Dura-Europos, 
                         with an emphasis on providing accessible translations of the numerous inscriptions on the objects as well as the specifics of what each object depicts.
