--- a/templates/julius_terentius.html
+++ b/templates/julius_terentius.html
@@ -52,12 +52,12 @@
                             <img src={{image}} alt="object1" class="img-fluid">
                             {%for entry in depictions%}
                                 <a onclick="highlight(event)" href="#{{loop.index-1}}depicts">
-                                    <div class="boundingbox depictions" style="left: {{entry[1][0]}}%; top: {{entry[1][1]}}%; padding-right: {{entry[1][2] * 0.9}}%; padding-bottom: {{entry[1][3] * 0.75}}%;" id="{{loop.index-1}}depictspos"></div>
+                                    <div class="boundingbox depictions" style="left: {{entry[1][0]}}%; top: {{entry[1][1]}}%; padding-right: {{entry[1][2] * 0.9}}%; padding-bottom: {{entry[1][3] * 0.75}}%; z-index: {{dep_z_index[loop.index-1]}}" id="{{loop.index-1}}depictspos"></div>
                                 </a>
                             {%endfor%}
                             {%for entry in translations%}
                                 <a onclick="highlight(event)" href="#{{loop.index-1}}inscripts">
-                                    <div class="boundingbox inscriptions" style="left: {{entry[2][0]}}%; top: {{entry[2][1]}}%; padding-right: {{entry[2][2] * 0.9}}%; padding-bottom: {{entry[2][3] * 0.75}}%;" id="{{loop.index-1}}inscriptspos"></div>
+                                    <div class="boundingbox inscriptions" style="left: {{entry[2][0]}}%; top: {{entry[2][1]}}%; padding-right: {{entry[2][2] * 0.9}}%; padding-bottom: {{entry[2][3] * 0.75}}%; z-index: {{trans_z_index[loop.index-1]}}" id="{{loop.index-1}}inscriptspos"></div>
                                 </a>
                             {%endfor%}
                     </div>
@@ -188,7 +188,7 @@
                 }
                 
                 if (highlightedBox != null) {
-                    $(highlightedBox).css("border", "3px solid " + color);
+                    $(highlightedBox).css("border", "3px solid " + $(highlightedBox).css("border-left-color"));
                     $(highlightedDescript).css("border", "none");
                 }
 
